Fixed navbar overlap

--- a/css/layout.css
+++ b/css/layout.css
@@ -19,6 +19,9 @@
     max-width: 100%;
 }
 
+body{
+    padding-top:100px;
+   }
 
 .topnav {
     overflow: hidden;
